[metadata]
name = fix_package
version = 0.0.1
author = Akhmatali (Ali) Mirzaev
author_email = jamescalam94@gmail.com
description = For parsing quickfix messages and return the output in json format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrzvUz/fix_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True